2008-02-05  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Josep Torre Valles <josep@fluendo.com>

	* gst/mpegvideoparse/mpegvideoparse.c: (gst_mpegvideoparse_flush):
	Flush packetizer too.

2008-02-04  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/ladspa/gstladspa.c: (gst_ladspa_base_init),
	(gst_ladspa_class_init), (ladspa_describe_plugin), (plugin_init):
	Don't use GST_BOILERPLATE as the stuff generated from it is not used
	anyway and can't be used.
	Store the class struct of the correct type in parent_class.
	Pass the LADSPA_Descriptor as class_data to the class_init function
	as preparation for the time, when we can add pad templates and friends
	in class_init and add a FIXME for that.
	Don't use a custom hash table for passing the LADSPA_Descriptors to
	base_init but use g_type_set_qdata and g_type_get_qdata.

2008-02-04  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/mpeg2enc/gstmpeg2encpicturereader.cc:
	Really fix the build.
	TODO : Apply spankOmatic2000 on thaytan's rear end.

2008-02-04  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/mpeg2enc/gstmpeg2encpicturereader.cc:
	  (GstMpeg2EncPictureReader.StreamPictureParams):
	  Fix compilation with libmjpegtools 1.8.x.

2008-02-04  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/ladspa/gstsignalprocessor.c:
	(gst_signal_processor_class_add_pad_template):
	Don't unref the pad template after adding it.
	gst_element_class_add_pad_template takes ownership of it.

2008-02-03  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/mpeg2enc/gstmpeg2encpicturereader.cc:
	Use the incoming pixel-aspect-ratio if provided to infer a 
	default aspect ratio, which can be overridden using the 'aspect'
	property.

	Fixes: #499008

2008-02-03  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Andrzej Mendel <andrzej dot mendel at gmail dot com>

	* configure.ac:
	Fix variable naming to make it possible to build the glimagesink
	plugin. Fixes bug #514093.
